Bug 516561 - Specific color selector not working properly
Summary: Specific color selector not working properly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 6.0.0-beta2
Platform: CachyOS Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-23 06:51 UTC by Boris Gonzalez
Modified: 2026-02-23 16:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
color sampling specific color selector (492.30 KB, video/mp4)
2026-02-23 06:51 UTC, Boris Gonzalez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Boris Gonzalez 2026-02-23 06:51:54 UTC
Created attachment 189981 [details]
color sampling specific color selector

SUMMARY
Specific color selector docker has Saturation, Value and Lightness, suck when color picking with sample color tools when HSV or HSL modes are selected, HSY, RGB and HSI work properly

STEPS TO REPRODUCE
1. Open some random image or paint random colors 
2. Enable "specific color selector" docker
3. Pick HSL or HSV 
4. Sample some colors with Ctrl + Left click or color sampler tool and observe the H S L/V elements and values 

OBSERVED RESULT
H value changes acordingly with the color sampled
S and V/L are stuck and wont change

EXPECTED RESULT
H,S and V/L represent correctly the color that was just sampled

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  CachyOS 
KDE Plasma Version:  6.6.0
KDE Frameworks Version: 6.23
Qt Version: 6.10.2

ADDITIONAL INFORMATION
Wayland
Comment 1 Boris Gonzalez 2026-02-23 07:26:11 UTC
*stuck
Comment 2 Freya Lupen 2026-02-23 16:26:37 UTC
Git commit ee8a5244c3dbbe0ef2cac1bfd7dc8c5054d23a63 by Freya Lupen.
Committed on 23/02/2026 at 16:26.
Pushed by freyalupen into branch 'master'.

Qt6: Fix Specific Color Selector HSV/HSL updating

On Qt6 the S and V/L variables get converted to floats for
QColor::getHsvF and getHslF, but it was forgotten to put them back
into the passed-in qreals to actually update anything.

M  +4    -0    libs/widgets/kis_color_input.cpp

https://invent.kde.org/graphics/krita/-/commit/ee8a5244c3dbbe0ef2cac1bfd7dc8c5054d23a63
Comment 3 Freya Lupen 2026-02-23 16:29:05 UTC
Git commit 3dbf1109d7e3464866c1149c03f154e7c8ca8e3a by Freya Lupen.
Committed on 23/02/2026 at 16:29.
Pushed by freyalupen into branch 'krita/6.0'.

Qt6: Fix Specific Color Selector HSV/HSL updating

On Qt6 the S and V/L variables get converted to floats for
QColor::getHsvF and getHslF, but it was forgotten to put them back
into the passed-in qreals to actually update anything.


(cherry picked from commit ee8a5244c3dbbe0ef2cac1bfd7dc8c5054d23a63)

Co-authored-by: Freya Lupen <penguinflyer2222@gmail.com>

M  +4    -0    libs/widgets/kis_color_input.cpp

https://invent.kde.org/graphics/krita/-/commit/3dbf1109d7e3464866c1149c03f154e7c8ca8e3a