Qt6: Fix Specific Color Selector HSV/HSL updating

On Qt6 the S and V/L variables get converted to floats for
QColor::getHsvF and getHslF, but it was forgotten to put them back
into the passed-in qreals to actually update anything.

BUG:516561